--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
        			<div id="x">
 				<p class="prompt" ><span>--- ~ </span><span class="purple">></span></p> 
 			</div>
-			<input type="text" placeholder="" class="search" autofocus onkeydown="search(this)"/>  
+			<input type="text" placeholder="" id="search" class="search" autofocus onkeydown="search(this)"/>  
     		</div>
 
 	</div>
 		
 	</body>
 
-	<script src="sites.js"></script> 	
+	<script src="js/sites.js"></script> 	
 
 </html>
 
