--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 		<nav id="links">
         		<ul>
-                		<li><a href="https://github.com">github</a></li>
-                		<li><a href="https://unsplash.com">unsplash</a></li>
-                		<li><a href="https://chess.com">chess</a></li>
-                		<li><a href="https://www.reddit.com">reddit</a></li>
+                		<li><a href="https://github.com" target="_blank">github</a></li>
+                		<li><a href="https://unsplash.com" target="_blank">unsplash</a></li>
+                		<li><a href="https://chess.com" target="_blank">chess</a></li>
+                		<li><a href="https://www.reddit.com" target="_blank">reddit</a></li>
             		</ul>
         	</nav>
 	
@@ -26,7 +26,7 @@
        			<div id="x">
 				<p class="prompt" ><span>--- ~ </span><span class="purple">></span></p> 
 			</div>
-			<input type="text" placeholder="" id="search" class="search" autofocus onkeydown="search(this)"/>  
+			<input type="text" placeholder="" id="search" class="search" onkeydown="search(this)"/>  
     		</div>
 
 	</div>
