--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
             <div id="input-prompt">
                 <p class="prompt"><span>| -</span><span class="purple">></span></p>
             </div>
-            <input type="text" placeholder="" id="prompt-input" autofocus class="prompt-input" onkeydown="search(this)" />
+            <input type="text" placeholder="" id="prompt-input" autofocus class="prompt-input" onkeydown="" />
         </div>
 
     </div>
 
+    <script src="https://unpkg.com/bowser@2.7.0/es5.js"></script>
     <script src="js/main.js"></script>
     <script src="js/helpers.js"></script>
 
