massive cleanup & optimizations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="terminal-content">
-        <p class="prompt"><span>| -<span class="purple">></span> ls<span id=clock></span></p>
+        <p id="prompt" class="prompt"><span>| -<span class="purple">></span> ls<span id=clock></span></p>
 
         <div id="links">
             <!-- Added sites goes here -->
@@ -30,6 +30,10 @@
     </div>
 
     <script src="https://unpkg.com/bowser@2.7.0/es5.js"></script>
+    <script src="js/consts.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/writers.js"></script>
+    <script src="js/commands.js"></script>
     <script src="js/main.js"></script>
     <script src="js/helpers.js"></script>
 
