--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div id="input-prompt">
           <p class="prompt"><span>| -</span><span class="purple">></span></p>
 	</div>
-	<input type="text" placeholder="" id="prompt-input" autofocus class="prompt-input" onkeydown="" />
+	<input type="text" placeholder="" id="prompt-input" autofocus class="prompt-input" onkeydown="" spellcheck="false" />
       </div>
       
     </div>
