--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <div id="content">
-        <p id="lastCommand" class="prompt"><span class="material-icons md-36">chevron_right</span> <span id="clock"></span></p>
+        <p id="lastCommand" class="prompt"><span class="purple material-icons md-36">chevron_right</span> <span id="clock"></span></p>
 
         <div id="links"></div>
-        <div id="PromptContainer">
+        <div id="promptContainer">
             <div id="prompt">
-                <p class="prompt"><span class="material-icons md-36">chevron_right</span></p>
+                <p class="prompt"><span class="purple material-icons md-36">chevron_right</span></p>
             </div>
 
             <input type="text" placeholder="..." id="input" class="input" spellcheck="false" autofocus>
