--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="nord">
     <div id="content">
         <p id="lastCommand" class="prompt"><span class="purple material-icons md-36">chevron_right</span> <span id="clock"></span></p>
 
