forgot to delete class.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Termstart</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/themes.css">
-    <link rel="icon" href="./favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="nord">
+<body>
     <div id="content">
         <p id="lastCommand" class="prompt"><span class="purple material-icons md-36">chevron_right</span> <span id="clock"></span></p>
 
@@ -24,5 +24,8 @@
             <input type="text" placeholder="..." id="input" class="input" spellcheck="false" autofocus>
         </div>
     </div>
+
+    <script src="js/commands.js"></script>
+    <script src="js/consts.js"></script>
 </body>
 </html>
