--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 
     <script src="js/commands.js"></script>
     <script src="js/consts.js"></script>
+    <script src="js/utils.js"></script>
 </body>
 </html>
