--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <script src="js/commands.js"></script>
     <script src="js/consts.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
