--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="content">
-        <p id="lastCommand" class="prompt"><span class="purple material-icons md-36">chevron_right</span> <span id="clock"></span></p>
+        <p id="lastCommand" class="prompt"><span class="purple material-icons md-36">chevron_right</span> <span id="last"></span> <span id="clock"></span></p>
 
         <div id="links"></div>
         <div id="promptContainer">
