fixed some bugs.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
     </div>
 
+    <script src="js/bowser.js"></script>
     <script src="js/commands.js"></script>
     <script src="js/consts.js"></script>
     <script src="js/utils.js"></script>
