style: rename tailwind.css to style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </title>
   <meta name="description" content="terminal themed bookmark manager">
   <link data-trunk rel="copy-dir" href="./src/assets/" />
-  <link data-trunk rel="tailwind-css" href="./src/tailwind.css" />
+  <link data-trunk rel="tailwind-css" href="./src/style.css" />
 </head>
 
 <body></body>
