simple button component, tailwindcss

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     termstart
   </title>
   <meta name="description" content="terminal themed bookmark manager">
-  <link data-trunk rel="copy-dir" href="./src/assets/" />
-  <link data-trunk rel="tailwind-css" href="./src/style.css" />
+  <link data-trunk rel="copy-dir" href="/src/assets/" />
+  <link data-trunk rel="tailwind-css" href="/src/style.css" />
 </head>
-
+<base href="/" />
 <body></body>
 
 </html>
