--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth transition-colors duration-200 ease-in-out">
 
 <head>
   <meta charset="utf-8">
@@ -12,6 +12,6 @@
   <link data-trunk rel="tailwind-css" href="/src/style.css" />
 </head>
 <base href="/" />
-<body></body>
+<body class="transition-colors duration-200 ease-in-out bg-github-light-bg dark:bg-github-dark-bg"></body>
 
 </html>
