--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="terminal themed bookmark manager">
   <link data-trunk rel="copy-dir" href="/src/assets/" />
   <link data-trunk rel="tailwind-css" href="/src/style.css" />
+  <!-- <link data-trunk rel="css" href="https://unpkg.com/lucide-static@0.294.0/font/lucide.min.css" /> -->
 </head>
 <base href="/" />
 <body class="transition-colors duration-200 ease-in-out bg-github-light-bg dark:bg-github-dark-bg"></body>
