--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" class="scroll-smooth transition-colors duration-700 ease-in-out">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>
-    termstart
-  </title>
-  <meta name="description" content="terminal themed bookmark manager">
-  <link data-trunk rel="copy-dir" href="/src/assets/" />
-  <link data-trunk rel="tailwind-css" href="/src/style.css" />
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-  <script>
-    // Ensure Supabase is loaded before the application starts
-    window.addEventListener('load', () => {
-      console.log('Supabase client loaded:', window.supabase);
-    });
-  </script>
-</head>
-<base data-trunk-public-url />
-<body class="transition-colors duration-700 ease-in-out bg-github-light-bg dark:bg-github-dark-bg">
-  <div id="app"></div>
-</body>
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>termstart</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
